@@ -19,59 +19,42 @@ $lang->load( 'plg_user_profile', JPATH_ADMINISTRATOR );
 ?>
 <div class="profile-edit<?php echo $this->params->get('pageclass_sfx')?>">
 <?php if ($this->params->get('show_page_heading')) : ?>
-<h1>
-	<?php echo $this->escape($this->params->get('page_heading')); ?>
-</h1>
+	<h1><?php echo $this->escape($this->params->get('page_heading')); ?></h1>
 <?php endif; ?>
 
 <form id="member-profile" action="<?php echo JRoute::_('index.php?option=com_users&task=profile.save'); ?>" method="post" class="form-validate">
-	<?php
-	// Iterate through the form fieldsets and display each one.
-	foreach ($this->form->getFieldsets() as $group => $fieldset):
-	?>
+<?php foreach ($this->form->getFieldsets() as $group => $fieldset):// Iterate through the form fieldsets and display each one.?>
+	<?php $fields = $this->form->getFieldset($group);?>
+	<?php if (count($fields)):?>
 	<fieldset>
-		<?php
-		// If the fieldset has a label set, display it as the legend.
-		if (isset($fieldset->label)):
-		?>
+		<?php if (isset($fieldset->label)):// If the fieldset has a label set, display it as the legend.?>
 		<legend><?php echo JText::_($fieldset->label); ?></legend>
-
+		<?php endif;?>
 		<dl>
-		<?php
-		endif;
-
-		// Iterate through the fields in the set and display them.
-		foreach ($this->form->getFieldset($group) as $field):
-			// If the field is hidden, just display the input.
-			if ($field->hidden):
-				echo $field->input;
-			else:
-			?>
+		<?php foreach ($fields as $field):// Iterate through the fields in the set and display them.?>
+			<?php if ($field->hidden):// If the field is hidden, just display the input.?>
+				<?php echo $field->input;?>
+			<?php else:?>
 				<dt>
 					<?php echo $field->label; ?>
 					<?php if (!$field->required): ?>
 					<span class="optional"><?php echo JText::_('COM_USERS_OPTIONAL'); ?></span>
 					<?php endif; ?>
 				</dt>
-				<dd>
-					<?php echo $field->input; ?>
-				</dd>
-			<?php
-			endif;
-		endforeach;
-		?>
+				<dd><?php echo $field->input; ?></dd>
+			<?php endif;?>
+		<?php endforeach;?>
 		</dl>
 	</fieldset>
-	<?php
-	endforeach;
-	?>
+	<?php endif;?>
+<?php endforeach;?>
 
 	<button type="submit" class="validate"><span><?php echo JText::_('JSUBMIT'); ?></span></button>
-	<?php echo JText::_('COM_USERS_OR'); ?>
+<?php echo JText::_('COM_USERS_OR'); ?>
 	<a href="<?php echo JRoute::_(''); ?>" title="<?php echo JText::_('JCANCEL'); ?>"><?php echo JText::_('JCANCEL'); ?></a>
 	
 	<input type="hidden" name="option" value="com_users" />
 	<input type="hidden" name="task" value="profile.save" />
-	<?php echo JHtml::_('form.token'); ?>
-</form>
+<?php echo JHtml::_('form.token'); ?>
+	</form>
 </div>
