@@ -16,59 +16,42 @@ JHtml::_('behavior.formvalidation');
 ?>
 <div class="registration<?php echo $this->params->get('pageclass_sfx')?>">
 <?php if ($this->params->get('show_page_heading')) : ?>
-<h1>
-	<?php echo $this->escape($this->params->get('page_heading')); ?>
-</h1>
+	<h1><?php echo $this->escape($this->params->get('page_heading')); ?></h1>
 <?php endif; ?>
 
-<form id="member-registration" action="<?php echo JRoute::_('index.php?option=com_users&task=registration.register'); ?>" method="post" class="form-validate">
-	<?php
-	// Iterate through the form fieldsets and display each one.
-	foreach ($this->form->getFieldsets() as $fieldset):
-	?>
-	<fieldset>
-		<?php
-		// If the fieldset has a label set, display it as the legend.
-		if (isset($fieldset->label)):
-		?>
-		<legend><?php echo JText::_($fieldset->label); ?></legend>
-
-		<dl>
-		<?php
-		endif;
-
-		// Iterate through the fields in the set and display them.
-		foreach($this->form->getFieldset($fieldset->name) as $field):
-			// If the field is hidden, just display the input.
-			if ($field->hidden):
-				echo $field->input;
-			else:
-			?>
+	<form id="member-registration" action="<?php echo JRoute::_('index.php?option=com_users&task=registration.register'); ?>" method="post" class="form-validate">
+<?php foreach ($this->form->getFieldsets() as $fieldset): // Iterate through the form fieldsets and display each one.?>
+	<?php $fields = $this->form->getFieldset($fieldset->name);?>
+	<?php if (count($fields)):?>
+		<fieldset>
+		<?php if (isset($fieldset->label)):// If the fieldset has a label set, display it as the legend.?>
+			<legend><?php echo JText::_($fieldset->label);?></legend>
+		<?php endif;?>
+			<dl>
+		<?php foreach($fields as $field):// Iterate through the fields in the set and display them.?>
+			<?php if ($field->hidden):// If the field is hidden, just display the input.?>
+				<?php echo $field->input;?>
+			<?php else:?>
 				<dt>
-					<?php echo $field->label; ?>
-					<?php if (!$field->required): ?>
-					<span class="optional"><?php echo JText::_('COM_USERS_OPTIONAL'); ?></span>
-					<?php endif; ?>
+				<?php echo $field->label; ?>
+				<?php if (!$field->required): ?>
+					<span class="optional"><?php echo JText::_('COM_USERS_OPTIONAL');?></span>
+				<?php endif; ?>
 				</dt>
-				<dd>
-					<?php echo $field->input; ?>
-				</dd>
-			<?php
-			endif;
-		endforeach;
-		?>
-		</dl>
-	</fieldset>
-	<?php
-	endforeach;
-	?>
+				<dd><?php echo $field->input;?></dd>
+			<?php endif;?>
+		<?php endforeach;?>
+			</dl>
+		</fieldset>
+	<?php endif;?>
+<?php endforeach;?>
 
-	<button type="submit" class="validate"><?php echo JText::_('JREGISTER'); ?></button>
-	<?php echo JText::_('COM_USERS_OR'); ?>
-	<a href="<?php echo JRoute::_(''); ?>" title="<?php echo JText::_('JCANCEL'); ?>"><?php echo JText::_('JCANCEL'); ?></a>
+		<button type="submit" class="validate"><?php echo JText::_('JREGISTER');?></button>
+	<?php echo JText::_('COM_USERS_OR');?>
+		<a href="<?php echo JRoute::_('');?>" title="<?php echo JText::_('JCANCEL');?>"><?php echo JText::_('JCANCEL');?></a>
 
-	<input type="hidden" name="option" value="com_users" />
-	<input type="hidden" name="task" value="registration.register" />
-	<?php echo JHtml::_('form.token'); ?>
-</form>
+		<input type="hidden" name="option" value="com_users" />
+		<input type="hidden" name="task" value="registration.register" />
+	<?php echo JHtml::_('form.token');?>
+	</form>
 </div>
