@@ -32,8 +32,8 @@ COM_USERS_LOGIN_USERNAME_LABEL="User Name"
 COM_USERS_OPTIONAL="(optional)"
 COM_USERS_OR="or"
 COM_USERS_PROFILE="User Profile"
-COM_USERS_PROFILE_CORE_LEGEND="Legend"
-COM_USERS_PROFILE_CUSTOM_LEGEND="Profile Custom Legend"
+COM_USERS_PROFILE_CORE_LEGEND="Profile"
+COM_USERS_PROFILE_CUSTOM_LEGEND="Custom Profile"
 COM_USERS_PROFILE_DEFAULT_LABEL="Edit Your Profile"
 COM_USERS_PROFILE_EMAIL1_DESC="Enter your e-mail address"
 COM_USERS_PROFILE_EMAIL1_LABEL="E-mail Address:"
