@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+07-June-2010 Christophe Demko
+ # Fixed issue [#20812] User profile information visible on registration even when disabled.
+
 06-June-2010 Christophe Demko
  # Fixed issue [#20703] Missing noscript warning for javascript disabled browsers (Nikolai Plath)
  # Fixed issue [#20816] CodeMirror does not highlighting css code - syntax selector hard coded (Nikolai Plath)
